--- a/HW3/hw3.Rmd
+++ b/HW3/hw3.Rmd
@@ -1,23 +1,11 @@
 ---
-title: "STATS 551 Homework 3"
-author: ".."
-date: "2023-10-09"
-output:
-  pdf_document: default
-  html_document:
-    df_print: paged
-editor_options: 
-  markdown: 
-    wrap: 72
+title: "STATS 551 HW3"
+author: '...'
+output: 
+  pdf_document
+header-includes:
+  - \usepackage{subfig}
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(
-	echo = TRUE,
-	message = TRUE,
-	warning = TRUE
-)
-```
 
 ## Problem 3
 
@@ -79,8 +67,8 @@ $$ Now we consider the full conditional distributions $$
 \begin{aligned}
 p(p_2|\cdot) &\propto \left( \prod_i p(C_i|p_2) \right) \cdot p(p_2) \\
 &\propto \prod_i (1-p_2)^{1-C_i}p_2^{C_i} \\
-&\propto p_2^{n-\Sigma C_i}(1-p_2)^{\Sigma C_i} \\
-&\sim \text{Beta}(n-\Sigma C_i+1, \Sigma C_i+1)
+&\propto p_2^{\Sigma C_i}(1-p_2)^{n-\Sigma C_i} \\
+&\sim \text{Beta}(\Sigma C_i+1, n-\Sigma C_i+1)
 \end{aligned}
 $$
 $$
@@ -150,7 +138,7 @@ in which, we use $N(X_i,|\cdot,\cdot)$ to denote the density function of multiva
 Overall, we have
 $$
 \begin{aligned}
-& p(p_2|\cdot) \sim \text{Beta}(n_1+1, n_2+1) \\
+& p(p_2|\cdot) \sim \text{Beta}(n_2+1, n_1+1) \\
 &p(\mu_1|\cdot) \sim N(\bar{X}_1, \frac{\Sigma_1}{n_1}) \\
 &p(\mu_2|\cdot) \sim N(\bar{X}_2, \frac{\Sigma_2}{n_2}) \\
 & p(\Sigma_1|\cdot) \sim   \text{Inv-Wishart}_{n_1+1}((S^0_1)^{-1}) \\
@@ -166,10 +154,211 @@ p_1=1-p_2,\,\,Z_i = C_i+1
 $$
 
 ```{r, p3c}
+library(MCMCpack)
+library(mvtnorm)
+set.seed(102932)
 mixgauss <- read.table("./mixgauss.dat", header=FALSE)
+n <- nrow(mixgauss)
+p <- 3
 
+#we need initial value for  p_2, \mu_1, \mu_2, \Sigma_1, \Sigma_2, C_1,...,C_n
+p2.0 <- 0.5
+Ci.0 <- sample(0:1, n, replace=TRUE) # 0: class 1, 1: class 2
+mu1.0 <- colMeans(mixgauss[Ci.0==0, ])
+mu2.0 <- colMeans(mixgauss[Ci.0==1, ])
+Sigma1.0 <- cov(mixgauss[Ci.0==0, ])
+Sigma2.0 <- cov(mixgauss[Ci.0==1, ])
 
+# we sample in the order p_2, \mu_1, \Sigma_1, \mu_2, \Sigma_2, C_1,...,C_n
+
+#' Gibbs sampler for p_2, \mu_1, \Sigma_1, \mu_2, \Sigma_2, C_1,...,C_n
+#' @param ...  sample of step t-1
+#' @return sample of step t
+Gibbs <- function(p2, mu1, mu2, Sigma1, Sigma2, Ci){
+  n2 <- sum(Ci)
+  n1 <- n - n2
+  
+  #sample p
+  p2.t <- rbeta(1, n2+1, n1+1)
+  #sample mu
+  mu1.t <- c(mvtnorm::rmvnorm(1,
+                         colMeans(mixgauss[Ci==0, ]),
+                         Sigma1/n1))
+  mu2.t <- c(mvtnorm::rmvnorm(1,
+                         colMeans(mixgauss[Ci==1, ]),
+                         Sigma2/n2))
+  #sample Sigma
+  X1 <- t(mixgauss[Ci==0, ])
+  X2 <- t(mixgauss[Ci==1, ])
+  S1 <- tcrossprod(X1 - mu1.t)
+  S2 <- tcrossprod(X2 - mu2.t)
+  Sigma1.t <- MCMCpack::riwish(n1+1, S1)
+  Sigma2.t <- MCMCpack::riwish(n2+1, S2)
+  #unnormalized prob
+  pCi.0 <- dmvnorm(mixgauss, mean=mu1.t, sigma=Sigma1.t) * (1-p2.t)
+  pCi.1 <- dmvnorm(mixgauss, mean=mu2.t, sigma=Sigma2.t) * p2.t
+
+  Ci.t <- mapply(function(p0, p1) sample(0:1, 1, prob=c(p0, p1)), pCi.0, pCi.1)
+  
+  return(list(p2=p2.t, mu1=mu1.t, mu2=mu2.t,
+              Sigma1=Sigma1.t, Sigma2=Sigma2.t, Ci=Ci.t))
+}
+
+#sampling
+samp.size <- 10000
+samples.out <- vector("list", samp.size)
+samples.out[[1]] <- list(p2=p2.0, mu1=mu1.0, mu2=mu2.0,
+                       Sigma1=Sigma1.0, Sigma2=Sigma2.0, Ci=Ci.0)
+for (i in 2:(samp.size+1)){
+  samples.out[[i]] <- do.call(Gibbs, args=samples.out[[i-1]])
+}
+
+#To make the final result of cluster labels Z_1...Z_n, and p_1, p_2, just
+samples.out <- lapply(samples.out, function(sublist) {
+  sublist$p1 <- 1-sublist$p2
+  sublist$Zi <- sublist$Ci+1
+  return(sublist)
+})
+
+#one example
+samples.out[[samp.size+1]]
 ```
+
+### (d)
+```{r p3d}
+mu1.sample <- do.call(rbind, lapply(samples.out, function(p) p$mu1))
+mu2.sample <- do.call(rbind, lapply(samples.out, function(p) p$mu2))
+Zi.sample <- do.call(rbind, lapply(samples.out, function(p) p$Zi))
+Sigma1.sample <- do.call(rbind, lapply(samples.out, function(p) c(p$Sigma1)))
+Sigma2.sample <- do.call(rbind, lapply(samples.out, function(p) c(p$Sigma2)))
+
+#point estimate
+mu1.hat <- colMeans(mu1.sample); mu1.hat
+mu2.hat <- colMeans(mu2.sample); mu2.hat
+Zi.hat <- colMeans(Zi.sample)
+Sigma1.hat <- matrix(colMeans(Sigma1.sample), ncol=3); Sigma1.hat
+Sigma2.hat <- matrix(colMeans(Sigma2.sample), ncol=3); Sigma2.hat
+
+#especially, for class label, to visualize, if Zi>=1.5, then cluster 2, else cluster 1
+Zi.hat.vi <- (Zi.hat>=1.5)+1; head(Zi.hat.vi)
+```
+
+\newpage
+
+It's not easy to embed an interactive plotly object in a pdf file. So we use two ways to visualize. First, we take two snapshots of these points.
+
+```{=latex}
+\begin{figure}[!htbp]
+  \centering
+  \subfloat{\includegraphics[width=0.45\linewidth]{"./p1.png"}}
+  \subfloat{\includegraphics[width=0.45\linewidth]{"./p2.png"}}
+\end{figure}
+```
+
+Second, we plot the projection of the data points and the contour of marginal distribution in three coordinate planes. To get the contour, we use the point estimate of $p_2$ to calculate the density.
+
+```{=latex}
+\begin{figure}[!htbp]
+  \centering
+  \subfloat[X-Y Plane]{\includegraphics[width=0.45\linewidth]{"./pxy.png"}}
+  \subfloat[X-Z Plane]{\includegraphics[width=0.45\linewidth]{"./pxz.png"}}\\
+  \subfloat[Y-Z Plane]{\includegraphics[width=0.45\linewidth]{"./pyz.png"}}
+\end{figure}
+```
+We show the cluster centers by square symbol. However, from the plots, maybe it's not appropriate to assume that the data comes from 2 classes.
+
+\newpage
+
+```{r visual, eval=FALSE}
+library(plotly, warn.conflicts=FALSE)
+# Create a 3D scatter plot with different colors for each class
+scatter_plot <- plot_ly(data = mixgauss,
+                        x = ~mixgauss[, 1], y = ~mixgauss[, 2], z = ~mixgauss[, 3],
+                        type = "scatter3d", color = ~factor(Zi.hat.vi),
+                        mode="markers",
+                        opacity=0.7)
+
+# Add the cluster center to the scatter plot
+center <- data.frame(rbind(mu1.hat, mu2.hat))
+colnames(center) <- c("x", "y", "z")
+center$class <- c("c1", "c2")
+final_plot <- scatter_plot %>%
+  add_trace(data=center,
+              x=~x,
+              y=~y,
+              z=~z,
+              color=~class,
+              mode="markers",
+              type="scatter3d",
+              opacity=1,
+              marker = list(size = 10, symbol = "square"))
+
+p2.hat <- mean(do.call(c, lapply(samples.out, function(p) p$p2)))
+
+# x-y plane
+x <- seq(-10, 12, length.out = 200)
+y <- seq(-10, 12, length.out = 200)
+grid <- expand.grid(x, y)
+
+itr <- list(c(1,2,3), c(1,3,2), c(2,3,1))
+out <- vector("list", 3)
+for (i in 1:3){
+  a <- itr[[i]][3]
+  o1 <- itr[[i]][1]
+  o2 <- itr[[i]][2]
+# Calculate density values for both distributions
+density1 <- dmvnorm(grid, mean = mu1.hat[-a], sigma = Sigma1.hat[-a, -a])
+density2 <- dmvnorm(grid, mean = mu2.hat[-a], sigma = Sigma2.hat[-a, -a])
+density <- (1-p2.hat)*density1+p2.hat*density2
+contour_plot1 <- plot_ly(x = x, y = y,
+                        z = matrix(density, ncol=200, byrow=TRUE),
+                        type = "contour")
+options(warn = -1)
+p <- contour_plot1 %>% add_trace(x = mixgauss[Zi.hat.vi==1,o1],
+                            y = mixgauss[Zi.hat.vi==1,o2],
+                            type = "scatter", mode = "markers",
+                            marker = list(color = "cyan") ) %>%
+                  add_trace(x = mixgauss[Zi.hat.vi==2,o1],
+                            y = mixgauss[Zi.hat.vi==2,o2],
+                            type = "scatter", mode = "markers",
+                            marker = list(color = "red")) %>%
+                  add_trace(x = mu1.hat[o1],
+                            y = mu1.hat[o2],
+                            type = "scatter", mode = "markers",
+                            marker = list(color = "black",symbol="square"),
+                            name = "C1 Center") %>%
+                  add_trace(x = mu2.hat[o1],
+                            y = mu2.hat[o2],
+                            type = "scatter", mode = "markers",
+                            marker = list(color = "black", symbol="square"),
+                            name = "C2 Center")
+out[[i]] <- p
+}
+```
+
+
+
+<!-- density2 <- dmvnorm(grid, mean = mu2.hat[-1], sigma = Sigma2.hat[-1, -1])
+
+<!-- It's hard to visualize density in 3-d space. So we can consider the marginal, for example, on x-y space. -->
+<!-- ```{r} -->
+<!-- x <- seq(-10, 15, length.out = 200) -->
+<!-- y <- seq(-10, 15, length.out = 200) -->
+<!-- grid <- expand.grid(x1, y1) -->
+
+<!-- # Calculate density values for both distributions -->
+<!-- density1 <- dmvnorm(grid, mean = mu1.hat[-1], sigma = Sigma1.hat[-1, -1]) -->
+<!-- density2 <- dmvnorm(grid, mean = mu2.hat[-1], sigma = Sigma2.hat[-1, -1]) -->
+<!-- contour_plot1 <- plot_ly(x = x, y = y,  -->
+<!--                          z = matrix(density1, ncol=200, byrow=TRUE), type = "contour") -->
+<!-- # Create the second contour plot -->
+<!-- contour_plot2 <- plot_ly(x = x, y = y,  -->
+<!--                          z = matrix(density2, ncol=200, byrow=TRUE), type = "contour") -->
+
+<!-- fig <- contour_plot1 %>% add_trace(data=contour_plot2$data[[1]]) -->
+<!-- fig -->
+
+<!-- ``` -->
 
 ## Problem 4
 
@@ -245,7 +434,8 @@ p_J(\sigma^2|\mathbf{y}) &\propto  (\sigma^2)^{-(n/2+1)} \exp
 & \propto (\sigma^2)^{-(\nu_n/2+1)} \exp 
 \left[-\frac{1}{2\sigma^2} \left( \nu_n \cdot  \sigma_n^2   \right)  \right] \\
 & \sim \text{Inv-}\chi^2(\nu_n, \sigma_n^2),\quad  \nu_n=n, 
-\sigma_n^2 =  \frac{\sum_i(y_i-\bar{y})^2}{n}
+\sigma_n^2 =  \frac{\sum_i(y_i-\bar{y})^2}{n} \\
+& \sim \text{Inv-Gamma}\left(\frac{n}{2}, \frac{\sum_i(y_i-\bar{y})^2}{2} \right)
 \end{aligned}
 $$ Hence, this joint density $p_J(\mu, \sigma^2|\mathbf{y})$ can be
 considered a proper posterior density, which is $$
