--- a/HW3/hw3.qmd
+++ b/HW3/hw3.qmd
@@ -14,6 +14,7 @@ format:
     execute:
       warning: true
       freeze: auto
+    mainfont: Times
   pdf:
     papersize: a4paper
     pdf-engine: pdflatex
